# rust_gstreamer

./: .gitignore  Cargo.toml  README.md
appsink_rs/: Cargo.toml
appsink_rs/src/: main.rs
basic/: CMakeLists.txt  main.c
basic_rs/: Cargo.toml
basic_rs/src/: main.rs
play_rs/: Cargo.toml
play_rs/src/: main.rs
src/: main.rs
